[project]
name = "depthai-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "depthai>=3",
    "ipython>=9.14.1",
    "pygame",
    "pymunk",
]

[[tool.uv.index]]
name = "depthai"
url = "https://artifacts.luxonis.com/artifactory/luxonis-python-snapshot-local"
explicit = true

[tool.uv.sources]
depthai = { index = "depthai" }
